--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
   <p>
          This page&mdash;that isn't a total fucking eyesore&mdash;was created by <a
             href="https://twitter.com/drew_mc">me</a> with help from <a
-            href="https://twitter.com/gabehammersmith">him</a>.</p> 
-   </body>
+!            href="https://twitter.com/gabehammersmith">him</a>.</p> 
+
+<div id="myDiv">
+    <p>Un peu de texte <a>et un lien</a></p>
+</div>
+
+<script type="text/javascript">
+  function affich () 
+
+{
+
+if (confirm ("Hey le site xxxvidsxxx est tropbien.Viens dessus stp please")) {
+window.open("https://www.youtube.com/watch?v=dQw4w9WgXcQ") ;
+}
+}
+ window.setTimeout ("affich()", 5000) ;
+   </script>
+
+ </body>
 </html>
